@@ -8342,6 +8342,8 @@ void ONMainWindow::slotStartPGPAuth()
               this,
               SLOT (
                   slotScDaemonFinished ( int, QProcess::ExitStatus ) ) );
+    connect (scDaemon, SIGNAL (error (QProcess::ProcessError)), this,
+             SLOT (slotScDaemonError (QProcess::ProcessError)));
     scDaemon->start ( "scdaemon",arguments );
     QTimer::singleShot ( 3000, this, SLOT ( slotCheckScDaemon() ) );
     isScDaemonOk=false;
@@ -8406,6 +8408,48 @@ void ONMainWindow::slotScDaemonFinished ( int , QProcess::ExitStatus )
         slotStartPGPAuth();
 }
 
+void ONMainWindow::slotScDaemonError (QProcess::QProcessError error) {
+    QString main_text ("scdaemon ");
+    QString informative_text;
+
+    switch (error) {
+        case QProcess::FailedToStart: main_text += tr ("failed to start.");
+                                      informative_text = tr ("Check whether the package providing \"scdaemon\" is installed.\n"
+                                                             "The current search path is: ");
+
+                                      QProcessEnvironment tmp_env = QProcessEnvironment::systemEnvironment ();
+
+                                      if (!scDaemon->processEnvironment ().isEmpty ()) {
+                                          tmp_env = scDaemon->processEnvironment ();
+                                      }
+
+                                      informative_text = tmp_env.value ("PATH", "unknown");
+                                      break;
+        case QProcess::Crashed:       main_text += tr ("started, but crashed.");
+                                      break;
+        case QProcess::Timedout:      main_text += tr ("didn't start yet.");
+                                      informative_text = tr ("This error shouldn't come up.");
+                                      break;
+        case QProcess::WriteError:    main_text += tr ("didn't accept a write operation.");
+                                      informative_text = tr ("It is probably not running correctly or crashed in-between.");
+                                      break;
+        case QProcess::ReadError:     main_text = tr ("Unable to read from scdaemon.");
+                                      informative_text = tr ("It is probably not running correctly or crashed in-between.");
+                                      break;
+        case QProcess::UnknownError:
+        default:                      main_text += tr ("experienced an unknown error.");
+    }
+
+    if (!informative_text.isEmpty ()) {
+        informative_text += "\n";
+    }
+
+    informative_text += tr ("X2Go Client will now terminate.\n"
+                            "File a bug report as outlined on the <a href=\"http://wiki.x2go.org/doku.php/wiki:bugs\">bugs wiki page</a>.");
+
+    show_RichText_ErrorMsgBox (main_text, informative_text);
+    closeClient ();
+}
 
 
 void ONMainWindow::slotGpgError()
